--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- font awsome and google fonts -->-->
+<!-- font awsome and google fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
             <p class="answer-message">Enter Answer:</p></p>
             <input id="answer-box" type="number">
         </div>
-        <button data-type="Submit" class="btn btn--grey">Submit Answer</button>
+        <button data-type="Submit" class="btn btn--gray">Submit Answer</button>
   </div>
 
   <div class="score-area">
