--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title> Love Maths</title>
+    <link rel="icon" href="assets/images/favicon.ico">
 </head>
 
 <body>
